@@ -22,7 +22,6 @@ import org.apache.accumulo.core.data.Range;
 import org.apache.accumulo.core.data.Value;
 import org.apache.accumulo.core.iterators.SortedKeyValueIterator;
 import org.apache.accumulo.core.iteratorsImpl.system.SortedMapIterator;
-import org.apache.commons.jexl3.parser.ParseException;
 import org.junit.Before;
 import org.junit.Test;
 
@@ -33,7 +32,6 @@ import datawave.query.attributes.AttributeFactory;
 import datawave.query.attributes.Document;
 import datawave.query.attributes.TypeAttribute;
 import datawave.query.data.parsers.DatawaveKey;
-import datawave.query.jexl.JexlASTHelper;
 import datawave.query.predicate.EventDataQueryFieldFilter;
 import datawave.query.predicate.EventDataQueryFilter;
 import datawave.query.util.TypeMetadata;
@@ -47,7 +45,7 @@ public class TLDTermFrequencyAggregatorTest {
     }
 
     @Test
-    public void apply_buildDocNotKeep() throws IOException, ParseException {
+    public void apply_buildDocNotKeep() throws IOException {
         Document doc = new Document();
         AttributeFactory attributeFactory = new AttributeFactory(new TypeMetadata());
 
@@ -72,7 +70,7 @@ public class TLDTermFrequencyAggregatorTest {
         Set<String> keepFields = new HashSet<>();
         keepFields.add("FIELD2");
 
-        EventDataQueryFilter filter = new EventDataQueryFieldFilter(JexlASTHelper.parseJexlQuery("FIELD2 == 'abc'"), Collections.emptySet());
+        EventDataQueryFilter filter = new EventDataQueryFieldFilter().withFields(Collections.singleton("FIELD2"));
         aggregator = new TLDTermFrequencyAggregator(keepFields, filter, -1);
         Key result = aggregator.apply(itr, doc, attributeFactory);
 
@@ -88,7 +86,7 @@ public class TLDTermFrequencyAggregatorTest {
     }
 
     @Test
-    public void apply_buildDocKeep() throws IOException, ParseException {
+    public void apply_buildDocKeep() throws IOException {
         Document doc = new Document();
         AttributeFactory attributeFactory = new AttributeFactory(new TypeMetadata());
 
@@ -114,8 +112,7 @@ public class TLDTermFrequencyAggregatorTest {
         keepFields.add("FIELD1");
         keepFields.add("FIELD2");
 
-        EventDataQueryFilter filter = new EventDataQueryFieldFilter(JexlASTHelper.parseJexlQuery("FIELD1 == 'VALUE1' && FIELD2 == 'VALUE2'"),
-                        Collections.emptySet());
+        EventDataQueryFilter filter = new EventDataQueryFieldFilter().withFields(Set.of("FIELD1", "FIELD2"));
         aggregator = new TLDTermFrequencyAggregator(keepFields, filter, -1);
         Key result = aggregator.apply(itr, doc, attributeFactory);
 
@@ -159,7 +156,7 @@ public class TLDTermFrequencyAggregatorTest {
     }
 
     @Test
-    public void apply_buildDocOnlyKeepToKeep() throws IOException, ParseException {
+    public void apply_buildDocOnlyKeepToKeep() throws IOException {
         Document doc = new Document();
         AttributeFactory attributeFactory = new AttributeFactory(new TypeMetadata());
 
@@ -174,7 +171,7 @@ public class TLDTermFrequencyAggregatorTest {
         Set<String> keepFields = new HashSet<>();
         keepFields.add("FIELD2");
 
-        EventDataQueryFilter filter = new EventDataQueryFieldFilter(JexlASTHelper.parseJexlQuery("FIELD2 == 'VALUE1'"), Collections.emptySet());
+        EventDataQueryFilter filter = new EventDataQueryFieldFilter().withFields(Collections.singleton("FIELD2"));
         aggregator = new TLDTermFrequencyAggregator(keepFields, filter, -1);
         Key result = aggregator.apply(itr, doc, attributeFactory);
 
